syntax = "proto3";

package tracer_study_grpc;
option go_package = "./;pb";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

message Post {
    uint64 id = 1;
    string title = 2;
    string slug = 3;
    string content = 4;
    string main_image = 5;
    string caption_image = 6;
    string type = 7;
    uint32 is_featured = 8;
    uint64 visitors = 9;
    string created_by = 10;
    string updated_by = 11;
    google.protobuf.Timestamp created_at = 12;
    google.protobuf.Timestamp updated_at = 13;
    google.protobuf.Timestamp deleted_at = 14;
    string tags = 15;
}

message GetAllPostsResponse {
    uint32 code = 1;
    string message = 2;
    repeated Post data = 3;
}

message GetPostByIdRequest {
    uint64 id = 1;
}

message GetPostResponse {
    uint32 code = 1;
    string message = 2;
    Post data = 3;
}

message CreatePostRequest {
    uint64 id = 1;
    string title = 2;
    string content = 3;
    string image_filename = 4;
    bytes image_buffer = 5;
    string image_caption = 6;
    string type = 7;
    uint32 is_featured = 8;
    string created_by = 9;
    string updated_by = 10;
    string tags = 11;
}

message DeletePostResponse {
    uint32 code = 1;
    string message = 2;
}

service PostService {
    rpc GetAllPosts(google.protobuf.Empty) returns (GetAllPostsResponse) {};
    rpc GetPostById(GetPostByIdRequest) returns (GetPostResponse) {};
    rpc CreatePost(CreatePostRequest) returns (GetPostResponse) {};
    rpc UpdatePost(CreatePostRequest) returns (GetPostResponse) {};
    rpc DeletePost(GetPostByIdRequest) returns (DeletePostResponse) {};
    rpc AddVisitor(GetPostByIdRequest) returns (GetPostResponse) {};
}